# useful_scripts

./: colmap_add_file_path.py  image_down_sample.py  pose_convert.py  pose_convert_ok_bak.py  tsdf.py  undistort_gt.py
format_transform/: 3d_point_txt_to_pcd.py  colmap_3d_point_bin_to_pcd.py  pcd_to_ply.py  pcd_to_txt.py
tsdf_gen/: CMakeLists.txt  main.cpp  run_red_bird.sh  run_red_wall.sh
